LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/WCGT_Approval_History__c.object-meta.xml
<CustomObject>
    <label>WCGT Approval History</label>
    <nameField>
        <displayFormat>ID-{0000}</displayFormat>
        <label>Approval/Rejection ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WCGT Approval Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>