LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/Approval_Step_Details__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step_Details__c</fullName>
    <label>Approval Step Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>