LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/ApprovedRejectedByREL_BUL__c.field-meta.xml
<CustomField>
    <fullName>ApprovedRejectedByREL_BUL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Approved/Rejected By REL/BUL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WCGT_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>