LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/Client_Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Client_Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Contact Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>WCGT Approval Histories</relationshipLabel>
    <relationshipName>WCGT_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>