LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/ClientName__c.field-meta.xml
<CustomField>
    <fullName>ClientName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>WCGT Approval Histories</relationshipLabel>
    <relationshipName>WCGT_Approval_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>