LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/DSApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>DSApprovalStatus__c</fullName>
    <label>DS Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending with DS</fullName>
            </value>
            <value>
                <fullName>DS Approved</fullName>
            </value>
            <value>
                <fullName>DS Rejected</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>