LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/DSApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>DSApprovedRejectedBy__c</fullName>
    <label>DS Approved/Rejected By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>