LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/DSApproverRecommendation__c.field-meta.xml
<CustomField>
    <fullName>DSApproverRecommendation__c</fullName>
    <label>DS Approver Recommendation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>