LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/DSTeamApprovalRejectionDate__c.field-meta.xml
<CustomField>
    <fullName>DSTeamApprovalRejectionDate__c</fullName>
    <label>DS Team Approval/Rejection Date</label>
    <type>Date</type>
</CustomField>