LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/JobApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>JobApprovalStatus__c</fullName>
    <label>Job Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>