LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/JobApprovalSubmissionDate__c.field-meta.xml
<CustomField>
    <fullName>JobApprovalSubmissionDate__c</fullName>
    <label>Job Approval Submission Date</label>
    <type>Date</type>
</CustomField>