LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/JobApprovedRejectedBy__c.field-meta.xml
<CustomField>
    <fullName>JobApprovedRejectedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Approved/Rejected By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>WCGT_Approval_Histories1</relationshipName>
    <type>Lookup</type>
</CustomField>