LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/REL_BULApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>REL_BULApprovalDate__c</fullName>
    <label>REL/BUL Approval Date</label>
    <type>Date</type>
</CustomField>