LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/REL_BULApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>REL_BULApprovalStatus__c</fullName>
    <label>REL/BUL Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>