LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/SubmitForDSApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>SubmitForDSApprovalDate__c</fullName>
    <label>Submit For DS Approval Date</label>
    <type>Date</type>
</CustomField>