LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/WCGT_Pipeline_ID__c.field-meta.xml
<CustomField>
    <fullName>WCGT_Pipeline_ID__c</fullName>
    <externalId>true</externalId>
    <label>WCGT Pipeline ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>