LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/WCGTClientContactID__c.field-meta.xml
<CustomField>
    <fullName>WCGTClientContactID__c</fullName>
    <label>WCGTClientContactID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>