LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/WCGTClientID__c.field-meta.xml
<CustomField>
    <fullName>WCGTClientID__c</fullName>
    <externalId>true</externalId>
    <label>WCGT Client ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>