LinKreta_POC_Repository/force-app/main/default/objects/WCGT_Approval_History__c/fields/WCGTJobID__c.field-meta.xml
<CustomField>
    <fullName>WCGTJobID__c</fullName>
    <label>WCGTJobID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>